apps/internal-svc/templates/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: internal-svc
  labels:
    app: internal-svc
subsets:
  - addresses:
      - ip: 192.168.14.10
      - ip: 192.168.14.11
      - ip: 192.168.14.12
    ports:
      - name: vault
        port: 8200
      - name: ceph
        port: 8443
