apps/internal-svc/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-svc
  labels:
    app: internal-svc
spec:
  ports:
  - name: vault
    protocol: TCP
    port: 8200
    targetPort: vault
  - name: ceph
    protocol: TCP
    port: 8080
    targetPort: ceph
  selector:
    app: internal-svc
