apps/internal-svc/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-svc-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  rules:
  - host: vault.infra.mout.ch
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: internal-svc
              port:
                number: 8200
  - host: ceph.infra.mout.ch
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: internal-svc
              port:
                number: 8080
  tls:
    - hosts:
        - vault.infra.mout.ch
      secretName: vault.infra.mout.ch-tls
    - hosts:
        - ceph.infra.mout.ch
      secretName: ceph.infra.mout.ch-tls
